Revert "Ensure mobile context appears above toolbar on mobile"
No longer needed after Ia18f31a299338f94e69f1882e6e477f3a22ae905,
which fixes the issue in a more generic way.

This reverts commit 7f4bc9340d69c6a49423bb62b2bc69f62245ce34.

--- a/src/ui/styles/ve.ui.Overlay.css
+++ b/src/ui/styles/ve.ui.Overlay.css
@@ -34,11 +34,3 @@
 	-webkit-transform: none;
 	transform: none;
 }
-
-.ve-ui-overlay-local-mobile {
-	/*
-	 * Toolbar is z-index 1, and the position:fixed context should
-	 * appear above it if the toolbar is not also position:fixed (T308201).
-	 */
-	z-index: 2;
-}
